test import data - table2

--- a/index.html
+++ b/index.html
@@ -613,7 +613,6 @@
           </div>
 <!-- First Heading -   H1- LIGNE 615 -->
           <h1 id="firstHeading" class="firstHeading">Archive:Crime statistics </h1>
-
 <!-- GRAPHIQUE - AJAX - TEMPS REEL - LOCALISATION EN DESSOUS DU H1 - LIGNE 616 -->
 
           <div id="bodyContent" class="bodyContent">
@@ -799,6 +798,7 @@
               </h2>
               <h3>
                 <span class="mw-headline" id="Crimes_et_d.C3.A9lits_enregistr.C3.A9s_par_les_services_de_police">Crimes recorded by the police</span>
+<!---OFFENCE POLICE CANVAS - INLINE DATA - WILL BE LOCATED - LINE 801 - BELOW span Crime=id (h3)-->
               </h3>
 
 
@@ -1469,6 +1469,7 @@
 
               <h4>
                 <span class="mw-headline" id="Homicides">Homicide</span>
+<!---HOMICIDE POLICE CANVAS - INLINE DATA - WILL BE LOCATED - LINE 1473 - BELOW span Homicides=id (h4)-->
               </h4>
 
               <table cellspacing="0" cellpadding="0" id="table2">
