table1 chart width right data -test1

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   <link rel="stylesheet" href="./assets/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/statexpflat.css">
   <link rel="stylesheet" href="./assets/statexpflat-grid.css">
+  <link
+  type="text/css"
+  rel="stylesheet"
+  href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css" />
 
   <style>
     a:lang(ar),
@@ -462,14 +466,14 @@
     <!--END HEADER BEGIN PAGE-->
     <!----
 <div class="onerow">
-<!---->
+-->
     <div class="row content-row">
       <!-- BEGIN LSF -->
       <!---->
       <div class="hidden-md hidden-lg hidden-xs hidden-sm sidebar content-col">
         <!----
 		<div class="col2 sidebar">
-		<!---->
+-->
         <div class="col-lg-4 col-md-4 head-menu-bar">
           <div class="dropdown">
             <button class="btn btn-default dropdown-toggle" type="button" id="p-navigation" data-toggle="dropdown" aria-haspopup="true"
@@ -2070,6 +2074,8 @@
   <script
 src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
   </script> 
+  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.0.1/d3.v3.min.js"></script>
+  <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js" defer></script>
   <script src="script.js"></script>
 </body>
 
