graphique table1 ok

--- a/index.html
+++ b/index.html
@@ -617,9 +617,9 @@
             </div>
 
           </div>
-<!-- First Heading -   H1- LIGNE 615 -->
+<!-- First Heading -   H1- LIGNE 620 -->
           <h1 id="firstHeading" class="firstHeading">Archive:Crime statistics </h1>
-<!-- GRAPHIQUE - AJAX - TEMPS REEL - LOCALISATION EN DESSOUS DU H1 - LIGNE 616 -->
+<!-- GRAPHIQUE - AJAX - TEMPS REEL - LOCALISATION EN DESSOUS DU H1 - LIGNE 622 -->
 
           <div id="bodyContent" class="bodyContent">
 
@@ -804,7 +804,7 @@
               </h2>
               <h3>
                 <span class="mw-headline" id="Crimes_et_d.C3.A9lits_enregistr.C3.A9s_par_les_services_de_police">Crimes recorded by the police</span>
-<!---OFFENCE POLICE CANVAS - INLINE DATA - WILL BE LOCATED - LINE 801 - BELOW span Crime=id (h3)-->
+<!---OFFENCE POLICE CANVAS - INLINE DATA - WILL BE LOCATED - LINE 807 - BELOW span Crime=id (h3)-->
               </h3>
 
 
@@ -1475,7 +1475,7 @@
 
               <h4>
                 <span class="mw-headline" id="Homicides">Homicide</span>
-<!---HOMICIDE POLICE CANVAS - INLINE DATA - WILL BE LOCATED - LINE 1473 - BELOW span Homicides=id (h4)-->
+<!---HOMICIDE POLICE CANVAS - INLINE DATA - WILL BE LOCATED - LINE 1478- BELOW span Homicides=id (h4)-->
               </h4>
 
               <table cellspacing="0" cellpadding="0" id="table2">
@@ -2071,14 +2071,14 @@
 
     <!--END PAGE-->
   </div>
-<!--Test charts cdn --->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script
 src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
   </script> 
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.0.1/d3.v3.min.js"></script>
-  <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js" defer></script>
+  <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
   <script src="script.js"></script>
+  <script src="dataTable1.js"></script>
 </body>
 
 </html>
