--- a/index.html
+++ b/index.html
@@ -2077,8 +2077,9 @@ src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
   </script> 
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.0.1/d3.v3.min.js"></script>
   <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
-  <script src="script.js"></script>
+  <script src="scriptTable1.js"></script>
   <script src="dataTable1.js"></script>
+  <script src="scriptTable2.js"></script>
 </body>
 
 </html>
