--- a/index.html
+++ b/index.html
@@ -2077,9 +2077,13 @@ src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
   </script> 
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.0.1/d3.v3.min.js"></script>
   <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+</script>
+  <script src="scriptAjaxGraph.js"></script>
   <script src="scriptTable1.js"></script>
   <script src="dataTable1.js"></script>
   <script src="scriptTable2.js"></script>
+  <script type="text/javascript" src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
