--- a/index.html
+++ b/index.html
@@ -2069,9 +2069,7 @@
   <script
 src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
   </script> 
-  <script src="script1.js"></script>
-  <script src="script2.js"></script>
-  <script src="script3.js"></script>
+  <script src="script.js"></script>
   <script type="text/javascript" src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
